--- a/style.css
+++ b/style.css
@@ -91,6 +91,9 @@ header {
     object-fit: cover;
     box-shadow: 0 0 20px rgba(0,0,0,0.1);
   }
+  .trigger{
+    width: 100%;
+  }
   .acordion{
     display: flex;
     flex-direction: column;
@@ -112,10 +115,11 @@ header {
     background-color: transparent;
     color: white;
   }
-
+  
   .acordion .content{
     display: none;
   }
+
   
 @media (max-width: 768px) {
     header {
